Git Support plugin: don't crash on projects with another or no VCS

This fix eliminates two crashes:
    * when a project w/o VCS is closed;
    * when a file in a subversion project is saved.

BUG: 441893
BUG: 441807